--- a/ShMeMo/pages/myapp_tabs_html.page
+++ b/ShMeMo/pages/myapp_tabs_html.page
@@ -8,21 +8,25 @@
 
 
   <!-- Pets Tab -->
-  <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
+  <ion-tab  href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Adopt Tab -->
+<!--
   <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
+-->
 
 
   <!-- About Tab -->
+<!--
   <ion-tab title="Account" icon="icon ion-gear-b" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
+-->
 
 
 </ion-tabs>
